--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ out/
 gradlew.bat
 gradlew
 build/
-gradle.properties
+#gradle.properties
 
 # Local configuration file (sdk path, etc)
 local.properties
