--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation "androidx.browser:browser:1.3.0"
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 }
